--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     "yaw": 1.5,
                     "type": "info",
                     "text": "Baltimore Museum of Art",
-                    "WXURL": "/pages/login/login"
+                    "WXURL": "/pages/vr/vr"
                 },
                 {
                     "pitch": -9.4,
