--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <script>
         pannellum.viewer('panorama', {
             "type": "equirectangular",
-            "panorama": "https://dev0101.com/images/jfk.jpg",
+            "panorama": "https://pannellum.org/images/jfk.jpg",
             "autoRotate": -2,
             "autoLoad": true,
             "hotSpots": [{
